wow what a cutie

--- a/git-collab-doc.html
+++ b/git-collab-doc.html
@@ -57,6 +57,14 @@ ul.task-list{list-style: none;}
 <section id="section" class="level2">
 <h2 class="anchored" data-anchor-id="section"></h2>
 </section>
+<section id="makin-changes-to-this-collaboration" class="level1">
+<h1>Makin’ changes to this collaboration!!</h1>
+<p>I’ll make some more super cool changes</p>
+<p><em>This is some text in italics that is really cool!</em></p>
+<p>Also a picture of action Thistle</p>
+<p><img src="images/Thistle.jpg" class="img-fluid"></p>
+<p>SO CUTE! such a little nugget</p>
+</section>
 
 </main>
 <!-- /main column -->
