--- a/git-collab-doc.html
+++ b/git-collab-doc.html
@@ -64,6 +64,9 @@ ul.task-list{list-style: none;}
 <p>Also a picture of action Thistle</p>
 <p><img src="images/Thistle.jpg" class="img-fluid"></p>
 <p>SO CUTE! such a little nugget</p>
+<p>She is a little nugget! &lt;3</p>
+<p>I’ll make some more greaaaat</p>
+<p>Changes are soooooo cool!</p>
 </section>
 
 </main>
